# loom-framework

./: .gitignore  ABSTRACT.md  CONTRIBUTING.md  MONOREPO-GUIDE.md  NAME-PROPOSALS.md  NATURAL-LANGUAGE-GUIDE.md  PUBLISH.md  QUICKSTART.md  README-SETUP.md  README.md  SETUP-INSTRUCTIONS.md  TASKS.md  TDD-WORKFLOW.md  TODO-MANUAL.md  install.ps1  install.sh  pyproject.toml  setup.py
.github/: GITHUB-TOPICS.md  NAME-PROPOSALS.md  TODO-INTERNAL.md
.github/ISSUE_TEMPLATE/: bug-report.md  good-first-issue.md  ide-support.md
.github/workflows/: ci.yml  pages.yml  release-zip.yml  version-bump.yml
antigravity/directives/: README.md  coding-standards.md
antigravity/execution/: git_commit.py  task_status.py
antigravity/ide-configs/claude/: CLAUDE.md.template
antigravity/ide-configs/intellij/: agentic-framework.md.template
antigravity/ide-configs/vscode/: clinerules.template
antigravity/ide-configs/windsurf/: windsurfrules.template
antigravity/scripts/: build-zip.py  init-project.ps1  read_antigravity.py  setup.py  task-tdd.py
antigravity/templates/: PROJECT.md.template  coding-standards.md
antigravity/templates/docs/: BACKLOG.md  CHANGELOG.md  HANDOFF.md  TASKS.md
docs/: PROJECT-MD-GUIDE.md  docs.html  doe-architecture.md  framework-guide.md  index.html  workflow-guide.md
examples/: README.md
examples/python-api-project/: AGENT.md  PROJECT.md  README.md
examples/python-api-project/docs/: TASKS.md
guides/: ABSTRACT.md  CONTRIBUTING.md  NATURAL-LANGUAGE-GUIDE.md  PUBLISH.md  SETUP-INSTRUCTIONS.md  TDD-WORKFLOW.md
internal/: AUDIT-REPORT.md  TASKS.md
loom/: __init__.py
loom/directives/: _template.md  coding-standards.md
loom/execution/: README.md  git_commit.py  task_status.py
loom/ide-configs/antigravity/: AGENTS.md.template  ANTIGRAVITY.md.template  GEMINI.md.template
loom/ide-configs/claude/: CLAUDE.md.template
loom/ide-configs/copilot/: copilot-instructions.md.template
loom/scripts/: build-zip.py  init-project.ps1  init-project.sh  read_loom.py  setup.py  sync-configs.sh  task-tdd.py  task.py
loom/templates/: 3-level-framework.md  AGENT.md.template  PROJECT.md.template  coding-standards.md
loom/templates/docs/: CHANGELOG.md  (+2 more)
tests/: README.md  test_documentation.py  test_setup_discovery.py
(+10 files in other folders)
